show eclipse download more prominently

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -331,6 +331,16 @@ Full-Width Styles
   background: url('../images/icon_download.png') no-repeat 0% 90%;
 }
 
+.eclipse_download_link {
+  display: block;
+  float: right;
+  width: 90px;
+  height: 70px;
+  text-indent: -5000px;
+  overflow: hidden;
+  background: url(../images/eclipse.png) no-repeat ;
+}
+
 .zip_download_link {
   display: block;
   float: right;
